--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   provider: ^6.1.5+1
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
