--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_dotenv: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+  rename_app: ^1.6.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +70,11 @@ flutter:
   assets:
     - .env
     - assets/logo.png
+flutter_launcher_icons:
+  android: true
+  ios: true
+  adaptive_icon_backGorud: "#004fff"
+  image_path: "assets/icon.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -98,3 +106,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  
+  
