--- a/.GitHub/workflows/build-android.yml
+++ b/.GitHub/workflows/build-android.yml
@@ -1,43 +1,47 @@
 name: Build Flutter APK
 
 on:
+  # Isso permite que você inicie o build manualmente na aba "Actions"
+  workflow_dispatch:
+
+  # Isso vai gerar o APK automaticamente quando você atualizar o branch 'main'
   push:
     branches:
-      - main # Dispara quando você der push no branch 'main'
-  workflow_dispatch: # Permite disparar manualmente pela aba "Actions"
+      - main
+      - master # Remova esta linha se você não usa o branch 'master'
 
 jobs:
   build-apk:
-    runs-on: ubuntu-latest # Usa uma máquina Linux
+    runs-on: ubuntu-latest
 
     steps:
       # 1. Baixa o seu código
-      - name: Checkout repository
+      - name: Checkout do Repositório
         uses: actions/checkout@v3
 
-      # 2. Configura o Java (necessário para o Android)
-      - name: Setup Java
+      # 2. Configura o Java (JDK 17)
+      - name: Configurar o Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
       # 3. Configura o Flutter
-      - name: Setup Flutter
+      - name: Configurar o Flutter SDK
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable' # Ou a versão que você usa
+          channel: 'stable' # Mude se usar um canal diferente
 
       # 4. Instala as dependências
-      - name: Install dependencies
+      - name: Instalar Dependências
         run: flutter pub get
 
-      # 5. Gera o APK de release
-      - name: Build APK
+      # 5. Gera o APK de Release
+      - name: Compilar APK
         run: flutter build apk --release
 
-      # 6. Salva o APK gerado para você baixar
-      - name: Upload APK Artifact
+      # 6. Salva o APK para download
+      - name: Fazer Upload do APK (Artefato)
         uses: actions/upload-artifact@v3
         with:
           name: app-release.apk
