--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<uses-permision android:name="Android.permision.INTERNET"/>
+<uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="Dicionário Dev"
         android:name="${applicationName}"
