--- a/.GitHub/workflows/build-android.yml
+++ b/.GitHub/workflows/build-android.yml
@@ -1,48 +1,39 @@
 name: Build Flutter APK
 
 on:
-  # Isso permite que você inicie o build manualmente na aba "Actions"
   workflow_dispatch:
-
-  # Isso vai gerar o APK automaticamente quando você atualizar o branch 'main'
   push:
     branches:
       - main
-      - master # Remova esta linha se você não usa o branch 'master'
+      - master
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Baixa o seu código
       - name: Checkout do Repositório
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Configura o Java (JDK 17)
       - name: Configurar o Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3. Configura o Flutter
       - name: Configurar o Flutter SDK
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable' # Mude se usar um canal diferente
+          channel: 'stable'
 
-      # 4. Instala as dependências
       - name: Instalar Dependências
         run: flutter pub get
 
-      # 5. Gera o APK de Release
       - name: Compilar APK
         run: flutter build apk --release
 
-      # 6. Salva o APK para download
       - name: Fazer Upload do APK (Artefato)
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
