--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.9.1
   provider: ^6.1.5+1
   flutter_typeahead: ^5.2.0
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
